tests/rosetta/out/C/call-an-object-method-1.error
cc: exit status 1
/tmp/call-an-object-method-1.c:12:3: error: unknown type name ‘foo_t’
   12 |   foo_t *data;
      |   ^~~~~
/tmp/call-an-object-method-1.c: In function ‘create_foo_list’:
/tmp/call-an-object-method-1.c:17:31: error: ‘foo_t’ undeclared (first use in this function)
   17 |   l.data = calloc(len, sizeof(foo_t));
      |                               ^~~~~
/tmp/call-an-object-method-1.c:17:31: note: each undeclared identifier is reported only once for each function it appears in
/tmp/call-an-object-method-1.c: In function ‘main’:
/tmp/call-an-object-method-1.c:29:3: error: unknown type name ‘foo_t’
   29 |   foo_t myValue = (Foo){};
      |   ^~~~~
/tmp/call-an-object-method-1.c:29:19: error: incompatible types when initializing type ‘int’ using type ‘Foo’ {aka ‘struct Foo’}
   29 |   foo_t myValue = (Foo){};
      |                   ^
/tmp/call-an-object-method-1.c:30:3: error: unknown type name ‘foo_t’
   30 |   foo_t myPointer = (Foo){};
      |   ^~~~~
/tmp/call-an-object-method-1.c:30:21: error: incompatible types when initializing type ‘int’ using type ‘Foo’ {aka ‘struct Foo’}
   30 |   foo_t myPointer = (Foo){};
      |                     ^
/tmp/call-an-object-method-1.c:31:19: warning: passing argument 1 of ‘Foo_ValueMethod’ from incompatible pointer type [-Wincompatible-pointer-types]
   31 |   Foo_ValueMethod(&myValue, 0);
      |                   ^~~~~~~~
      |                   |
      |                   int *
/tmp/call-an-object-method-1.c:24:26: note: expected ‘Foo *’ {aka ‘struct Foo *’} but argument is of type ‘int *’
   24 | int Foo_ValueMethod(Foo *self, int x) {}
      |                     ~~~~~^~~~
/tmp/call-an-object-method-1.c:32:21: warning: passing argument 1 of ‘Foo_PointerMethod’ from incompatible pointer type [-Wincompatible-pointer-types]
   32 |   Foo_PointerMethod(&myPointer, 0);
      |                     ^~~~~~~~~~
      |                     |
      |                     int *
/tmp/call-an-object-method-1.c:26:28: note: expected ‘Foo *’ {aka ‘struct Foo *’} but argument is of type ‘int *’
   26 | int Foo_PointerMethod(Foo *self, int x) {}
      |                       ~~~~~^~~~
/tmp/call-an-object-method-1.c:33:19: warning: passing argument 1 of ‘Foo_ValueMethod’ from incompatible pointer type [-Wincompatible-pointer-types]
   33 |   Foo_ValueMethod(&myPointer, 0);
      |                   ^~~~~~~~~~
      |                   |
      |                   int *
/tmp/call-an-object-method-1.c:24:26: note: expected ‘Foo *’ {aka ‘struct Foo *’} but argument is of type ‘int *’
   24 | int Foo_ValueMethod(Foo *self, int x) {}
      |                     ~~~~~^~~~
/tmp/call-an-object-method-1.c:34:21: warning: passing argument 1 of ‘Foo_PointerMethod’ from incompatible pointer type [-Wincompatible-pointer-types]
   34 |   Foo_PointerMethod(&myValue, 0);
      |                     ^~~~~~~~
      |                     |
      |                     int *
/tmp/call-an-object-method-1.c:26:28: note: expected ‘Foo *’ {aka ‘struct Foo *’} but argument is of type ‘int *’
   26 | int Foo_PointerMethod(Foo *self, int x) {}
      |                       ~~~~~^~~~
/tmp/call-an-object-method-1.c:35:19: warning: passing argument 1 of ‘Foo_ValueMethod’ from incompatible pointer type [-Wincompatible-pointer-types]
   35 |   Foo_ValueMethod(&myValue, 0);
      |                   ^~~~~~~~
      |                   |
      |                   int *
/tmp/call-an-object-method-1.c:24:26: note: expected ‘Foo *’ {aka ‘struct Foo *’} but argument is of type ‘int *’
   24 | int Foo_ValueMethod(Foo *self, int x) {}
      |                     ~~~~~^~~~
/tmp/call-an-object-method-1.c:36:21: warning: passing argument 1 of ‘Foo_PointerMethod’ from incompatible pointer type [-Wincompatible-pointer-types]
   36 |   Foo_PointerMethod(&myPointer, 0);
      |                     ^~~~~~~~~~
      |                     |
      |                     int *
/tmp/call-an-object-method-1.c:26:28: note: expected ‘Foo *’ {aka ‘struct Foo *’} but argument is of type ‘int *’
   26 | int Foo_PointerMethod(Foo *self, int x) {}
      |                       ~~~~~^~~~
