tests/rosetta/out/C/call-an-object-method-1.c
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
#include <stdio.h>
#include <stdlib.h>

typedef struct Foo Foo;

typedef struct Foo {
} Foo;
typedef struct {
  int len;
  foo_t *data;
} foo_list_t;
foo_list_t create_foo_list(int len) {
  foo_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(foo_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
int Foo_ValueMethod(Foo *self, int x) {}

int Foo_PointerMethod(Foo *self, int x) {}

int main() {
  foo_t myValue = (Foo){};
  foo_t myPointer = (Foo){};
  Foo_ValueMethod(&myValue, 0);
  Foo_PointerMethod(&myPointer, 0);
  Foo_ValueMethod(&myPointer, 0);
  Foo_PointerMethod(&myValue, 0);
  Foo_ValueMethod(&myValue, 0);
  Foo_PointerMethod(&myPointer, 0);
  return 0;
}
